--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,7 @@ html{
   overflow-x: hidden;
 }
 .sideNav-div{
-  height: 90vh;
+  height: 70vh;
   background: red;
   min-width: 200px;
 }
@@ -25,6 +25,11 @@ html{
   height: 20vh;
   background: #f7f7fa;
 }
+
+img{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 50px;
+}
 .button-valid-div{
   width: 100%;
   background: #f7f7fa;
@@ -35,6 +40,11 @@ html{
   padding-top: 5px;
   padding-bottom: 5px;
 
+}
+.logo-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .paper{
