--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,17 @@ html{
   background: #f7f7fa;
 }
 
+.logout{
+  position: absolute;
+  top:0px;
+  right: 0px;
+  margin: 20px;
+}
+
+.logout-button{
+  color: green;
+}
+
 img{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 50px;
